--- a/.github/workflows/deploy-published-releases.yaml
+++ b/.github/workflows/deploy-published-releases.yaml
@@ -28,12 +28,12 @@ jobs:
 
       - name: Build package
         run: |-
-          npm run build
+          npm run bundle
 
       - name: Prepare release
         run: |-
           cp package.json LICENSE README.md build/
-          cd bundle
+          cd build
           sed -i -e "s~\"version\": \"0.0.0-dev\"~\"version\": \"${GITHUB_REF##*/}\"~" package.json
 
       - name: Publish pre-release to NPM
