--- a/.github/workflows/deploy-published-releases.yaml
+++ b/.github/workflows/deploy-published-releases.yaml
@@ -36,6 +36,8 @@ jobs:
           cp package.json LICENSE README.md build/
           cd build
           sed -i -e "s~\"version\": \"0.0.0-dev\"~\"version\": \"${GITHUB_REF##*/}\"~" package.json
+          sed -i -e "s~./build~.~" package.json
+          sed -i -e "s~./src~.~" package.json
 
       - name: Publish pre-release to NPM
         if: ${{ github.event.release.prerelease }}
