--- a/package.json
+++ b/package.json
@@ -19,14 +19,13 @@
     "url": "git+https://github.com/croct-tech/plug-react.git"
   },
   "main": "./build/index.js",
-  "module": "./build/index.modern.js",
   "types": "./build/index.d.ts",
   "source": "./src/index.ts",
   "engines": {
     "node": ">=10"
   },
   "scripts": {
-    "lint": "eslint 'src/**/*.ts' 'src/**/*.tsx'",
+    "lint": "eslint 'src/**/*.ts' 'src/**/*.tsx' 'examples/**/*.ts' 'examples/**/*.tsx'",
     "test": "jest -c jest.config.js --coverage",
     "validate": "tsc --noEmit",
     "build": "tsc",
@@ -35,15 +34,17 @@
     "build-storybook": "build-storybook"
   },
   "peerDependencies": {
-    "@croct/plug": "^0.7.5",
-    "react": ">= 16.8"
+    "react": "^16.8.0  || ^17.0.0",
+    "react-dom": "^16.8.0  || ^17.0.0"
+  },
+  "dependencies": {
+    "@croct/plug": "^0.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.13",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
-    "@croct/plug": "^0.7.5",
     "@storybook/addon-actions": "^6.2.3",
     "@storybook/addon-essentials": "^6.2.3",
     "@storybook/addon-links": "^6.2.3",
@@ -56,12 +57,12 @@
     "@types/node": "^14.14.37",
     "@types/react": "^16.0.0",
     "@types/react-dom": "^16.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0",
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "8.1.0",
-    "eslint": "^7.23.0",
+    "eslint": "^7.27.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-standard": "^16.0.2",
     "eslint-config-standard-react": "^11.0.1",
@@ -69,7 +70,7 @@
     "eslint-plugin-jest": "^24.3.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-standard": "^5.0.0",
     "jest": "26.6.0",
     "microbundle": "^0.13.0",
