--- a/package.json
+++ b/package.json
@@ -77,7 +77,8 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "typescript": "^4.1.5",
-    "webpack": "4.44.2"
+    "webpack": "4.44.2",
+    "ts-node": "^10.0.0"
   },
   "files": [
     "**/*.js",
