--- a/package.json
+++ b/package.json
@@ -49,10 +49,9 @@
     "@storybook/addon-essentials": "^6.2.3",
     "@storybook/addon-links": "^6.2.3",
     "@storybook/react": "^6.2.3",
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/react-hooks": "^5.1.1",
-    "@testing-library/user-event": "^13.0.16",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/react-hooks": "^7.0.0",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.37",
     "@types/react": "^16.0.0",
@@ -73,12 +72,13 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-standard": "^5.0.0",
     "jest": "26.6.0",
+    "jest-environment-node": "^26.6.2",
     "microbundle": "^0.13.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "ts-node": "^10.0.0",
     "typescript": "^4.1.5",
-    "webpack": "4.44.2",
-    "ts-node": "^10.0.0"
+    "webpack": "4.44.2"
   },
   "files": [
     "**/*.js",
