--- a/examples/next-ssr-app/package.json
+++ b/examples/next-ssr-app/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
     "@croct/plug-react": "latest",
@@ -14,7 +15,13 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@croct/plug": "^0.8.2",
+    "@testing-library/jest-dom": "^5.13.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^13.1.9",
     "@types/react": "17.0.6",
+    "babel-jest": "^27.0.2",
+    "jest": "^27.0.4",
     "typescript": "4.2.4"
   }
 }
