--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
     "@storybook/addon-actions": "^6.2.3",
-    "@storybook/addon-essentials": "^6.2.3",
+    "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.3",
-    "@storybook/react": "^6.2.3",
+    "@storybook/react": "^6.2.9",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/react-hooks": "^7.0.0",
@@ -73,12 +73,12 @@
     "eslint-plugin-standard": "^5.0.0",
     "jest": "26.6.0",
     "jest-environment-node": "^26.6.2",
-    "microbundle": "^0.13.0",
+    "microbundle": "^0.13.3",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "ts-node": "^10.0.0",
     "typescript": "^4.1.5",
-    "webpack": "4.44.2"
+    "webpack": "^5.39.1"
   },
   "files": [
     "**/*.js",
