--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "build-storybook": "build-storybook -s ./.storybook/static"
   },
   "peerDependencies": {
-    "react": "^16.8.0  || ^17.0.0",
-    "react-dom": "^16.8.0  || ^17.0.0"
+    "react": "^16.8.0  || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0  || ^17.0.0 || ^18.0.0"
   },
   "dependencies": {
-    "@croct/plug": "^0.8.3"
+    "@croct/plug": "^0.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.13",
@@ -46,9 +46,9 @@
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
     "@storybook/addon-actions": "^6.2.3",
-    "@storybook/addon-essentials": "^6.3.1",
+    "@storybook/addon-essentials": "^6.4.13",
     "@storybook/addon-links": "^6.2.3",
-    "@storybook/react": "^6.3.1",
+    "@storybook/react": "^6.4.13",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/react-hooks": "^7.0.0",
