--- a/package.json
+++ b/package.json
@@ -38,48 +38,49 @@
     "react-dom": "^16.8.0  || ^17.0.0 || ^18.0.0"
   },
   "dependencies": {
-    "@croct/plug": "^0.10.0"
+    "@croct/plug": "^0.10.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.13",
-    "@babel/preset-env": "^7.13.12",
-    "@babel/preset-react": "^7.13.13",
-    "@babel/preset-typescript": "^7.13.0",
-    "@storybook/addon-actions": "^6.2.3",
-    "@storybook/addon-essentials": "^6.4.13",
-    "@storybook/addon-links": "^6.2.3",
-    "@storybook/react": "^6.4.13",
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^13.0.0",
+    "@babel/core": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
+    "@babel/preset-typescript": "^7.17.12",
+    "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-essentials": "^6.5.9",
+    "@storybook/addon-links": "^6.5.9",
+    "@storybook/react": "^6.5.9",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "@testing-library/react-hooks": "^8.0.0",
-    "@types/jest": "^28.0.0",
+    "@types/jest": "^28.1.1",
     "@types/node": "^16.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^28.0.0",
-    "babel-loader": "8.2.5",
+    "babel-jest": "^28.1.1",
+    "babel-loader": "^8.2.5",
     "eslint": "^8.0.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-config-standard-react": "^11.0.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^26.0.0",
+    "eslint-plugin-n": "^15.2.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-standard": "^5.0.0",
-    "jest": "28.1.1",
-    "jest-environment-jsdom": "^28.1.0",
-    "jest-environment-node": "^28.0.0",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
+    "jest-environment-node": "^28.1.1",
     "microbundle": "^0.15.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.1.5",
-    "webpack": "^5.39.1"
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.3",
+    "webpack": "^5.73.0"
   },
   "files": [
     "**/*.js",
