--- a/.github/workflows/deploy-published-releases.yaml
+++ b/.github/workflows/deploy-published-releases.yaml
@@ -33,9 +33,9 @@ jobs:
 
       - name: Prepare release
         run: |-
-          cp package.json LICENSE README.md build/
+          cp LICENSE README.md build/
+          jq package.json '.devDependencies = {}' > ./build/package.json
           cd build
-          jq package.json '.devDependencies = {}' > ./package.json
           sed -i -e "s~\"version\": \"0.0.0-dev\"~\"version\": \"${GITHUB_REF##*/}\"~" package.json
           sed -i -e "s~\./build~.~" package.json
           sed -i -e "s~./src~.~" package.json
