--- a/.github/workflows/deploy-published-releases.yaml
+++ b/.github/workflows/deploy-published-releases.yaml
@@ -33,10 +33,11 @@ jobs:
 
       - name: Prepare release
         run: |-
-          cp package.json LICENSE README.md build/
+          cp LICENSE README.md build/
+          jq package.json '.devDependencies = {}' > ./build/package.json
           cd build
           sed -i -e "s~\"version\": \"0.0.0-dev\"~\"version\": \"${GITHUB_REF##*/}\"~" package.json
-          sed -i -e "s~./build~.~" package.json
+          sed -i -e "s~\./build~.~" package.json
           sed -i -e "s~./src~.~" package.json
 
       - name: Publish pre-release to NPM
