--- a/.github/workflows/deploy-published-releases.yaml
+++ b/.github/workflows/deploy-published-releases.yaml
@@ -33,8 +33,7 @@ jobs:
 
       - name: Prepare release
         run: |-
-          cp LICENSE README.md build/
-          jq package.json '.devDependencies = {}' > ./build/package.json
+          cp package.json LICENSE README.md build/
           cd build
           sed -i -e "s~\"version\": \"0.0.0-dev\"~\"version\": \"${GITHUB_REF##*/}\"~" package.json
           sed -i -e "s~\./build~.~" package.json
