--- a/examples/next-ssr-app/package.json
+++ b/examples/next-ssr-app/package.json
@@ -6,22 +6,32 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "lint": "next lint",
     "test": "jest"
   },
   "dependencies": {
     "@croct/plug-react": "latest",
-    "next": "11.1.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "^13.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "server-only": "^0.0.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@croct/plug": "^0.8.2",
-    "@testing-library/jest-dom": "^5.13.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^13.1.9",
-    "@types/react": "17.0.6",
-    "babel-jest": "^27.0.2",
-    "jest": "^27.0.4",
-    "typescript": "4.2.4"
+    "@croct/eslint-plugin": "^0.6.3",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.2.3",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.8",
+    "@types/uuid": "^8.3.4",
+    "babel-jest": "^29.3.1",
+    "eslint": "^8.27.0",
+    "eslint-config-next": "^13.0.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.3.1",
+    "typescript": "^4.8.4"
   }
 }
