--- a/examples/next-csr-app/package.json
+++ b/examples/next-csr-app/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint 'lib/**/*.ts' 'components/**/*.tsx' 'pages/**/*.tsx'"
   },
   "dependencies": {
     "@croct/plug-react": "latest",
