--- a/examples/next-ssr-app/package.json
+++ b/examples/next-ssr-app/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint 'lib/**/*.ts' 'components/**/*.tsx' 'app/**/*.tsx' 'pages/**/*.tsx'",
     "test": "jest"
   },
   "dependencies": {
@@ -18,6 +18,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@croct/plug": "^0.11.0-alpha",
     "@croct/eslint-plugin": "^0.6.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
