--- a/.github/workflows/branch-validations.yaml
+++ b/.github/workflows/branch-validations.yaml
@@ -128,6 +128,7 @@ jobs:
           for dir in */; do
             cd "${EXAMPLE_DIRECTORY}/$dir"
             npm ci
+            npm run lint
             npm run test
           done
           cd "${EXAMPLE_DIRECTORY}"
