--- a/.github/workflows/branch-library-validations.yaml
+++ b/.github/workflows/branch-library-validations.yaml
@@ -12,37 +12,36 @@ on:
       - opened
 
 jobs:
-  # security-checks:
-  #   runs-on: ubuntu-18.04
-  #   steps:
-  #     - uses: actions/checkout@v1
-  #     - uses: actions/setup-node@v1
-  #       with:
-  #         node-version: 12
+  security-checks:
+   runs-on: ubuntu-latest
+   steps:
+     - uses: actions/checkout@v1
+     - uses: actions/setup-node@v1
+       with:
+         node-version: 16
 
-  #     - name: Cache dependencies
-  #       id: cache-dependencies
-  #       uses: actions/cache@v1
-  #       with:
-  #         path: node_modules
-  #         key: node_modules-${{ hashFiles('**/package-lock.json') }}
+     - name: Cache dependencies
+       id: cache-dependencies
+       uses: actions/cache@v1
+       with:
+         path: node_modules
+         key: node_modules-${{ hashFiles('**/package-lock.json') }}
 
-  #     - name: Install dependencies
-  #       if: steps.cache-dependencies.outputs.cache-hit != 'true'
-  #       run: npm ci
+     - name: Install dependencies
+       if: steps.cache-dependencies.outputs.cache-hit != 'true'
+       run: npm ci
 
-  #     - name: Check dependency vulnerabilities
-  #       run: |-
-  #         npm i -g npm-audit-resolver
-  #         npx check-audit
+     - name: Check dependency vulnerabilities
+       run: |-
+         npm audit --omit=dev
 
   validate:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 12
+          node-version: 16
 
       - name: Cache dependencies
         id: cache-dependencies
@@ -59,7 +58,7 @@ jobs:
         run: npm run validate
 
   lint:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     needs:
       - validate
     steps:
@@ -82,8 +81,8 @@ jobs:
       - name: Check coding standard violations
         run: npm run lint
 
-  test-lib:
-    runs-on: ubuntu-18.04
+  test:
+    runs-on: ubuntu-latest
     needs:
       - validate
     steps:
@@ -110,25 +109,3 @@ jobs:
           coverageCommand: npm test
           coverageLocations:
             ./coverage/lcov.info:lcov
-
-  test-examples:
-    runs-on: ubuntu-18.04
-    needs:
-      - validate
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 12
-
-      - name: Run example tests
-        run: |-
-          cd examples
-          EXAMPLE_DIRECTORY=$(pwd)
-          for dir in */; do
-            cd "${EXAMPLE_DIRECTORY}/$dir"
-            npm ci
-            npm run lint
-            npm run test
-          done
-          cd "${EXAMPLE_DIRECTORY}"
