--- a/examples/csr-app/package.json
+++ b/examples/csr-app/package.json
@@ -9,7 +9,7 @@
   },
   "devDependencies": {
     "@croct/eslint-plugin": "^0.6.3",
-    "@croct/plug": "0.11.0-alpha",
+    "@croct/plug": "0.11.0-alpha.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
