Enable examples workflow

--- a/.github/workflows/deploy-storybook.yaml
+++ b/.github/workflows/deploy-storybook.yaml
@@ -1,11 +1,9 @@
 on:
   workflow_dispatch:
     inputs: {}
-  push:
-    branches:
-      - master
-    paths:
-      - 'src/**'
+  release:
+    types:
+      - published
 
 jobs:
   deploy-storybook:
@@ -17,7 +15,7 @@ jobs:
 
       - uses: actions/setup-node@v3
         with:
-          node-version: 14
+          node-version: 16
 
       - name: Cache dependencies
         id: cache-dependencies
