--- a/.github/workflows/branch-csr-example-validations.yaml
+++ b/.github/workflows/branch-csr-example-validations.yaml
@@ -1,4 +1,4 @@
-name: Validations
+name: Example CSR - Validations
 
 on:
   push:
@@ -14,6 +14,9 @@ on:
 jobs:
   security-checks:
    runs-on: ubuntu-latest
+   defaults:
+     run:
+       working-directory: examples/csr-app
    steps:
      - uses: actions/checkout@v1
      - uses: actions/setup-node@v1
@@ -24,8 +27,8 @@ jobs:
        id: cache-dependencies
        uses: actions/cache@v1
        with:
-         path: node_modules
-         key: node_modules-${{ hashFiles('package-lock.json') }}
+         path: examples/csr-app/node_modules
+         key: csr_app_example_node_modules-${{ hashFiles('examples/csr-app/package-lock.json') }}
 
      - name: Install dependencies
        if: steps.cache-dependencies.outputs.cache-hit != 'true'
@@ -37,6 +40,9 @@ jobs:
 
   validate:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: examples/csr-app
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -47,8 +53,8 @@ jobs:
         id: cache-dependencies
         uses: actions/cache@v3
         with:
-          path: node_modules
-          key: node_modules-${{ hashFiles('package-lock.json') }}
+          path: examples/csr-app/node_modules
+          key: csr_app_example_node_modules-${{ hashFiles('examples/csr-app/package-lock.json') }}
 
       - name: Install dependencies
         if: steps.cache-dependencies.outputs.cache-hit != 'true'
@@ -59,6 +65,9 @@ jobs:
 
   lint:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: examples/csr-app
     needs:
       - validate
     steps:
@@ -71,8 +80,8 @@ jobs:
         id: cache-dependencies
         uses: actions/cache@v3
         with:
-          path: node_modules
-          key: node_modules-${{ hashFiles('package-lock.json') }}
+          path: examples/csr-app/node_modules
+          key: csr_app_example_node_modules-${{ hashFiles('examples/csr-app/package-lock.json') }}
 
       - name: Install dependencies
         if: steps.cache-dependencies.outputs.cache-hit != 'true'
@@ -83,6 +92,9 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: examples/csr-app
     needs:
       - validate
     steps:
@@ -95,17 +107,12 @@ jobs:
         id: cache-dependencies
         uses: actions/cache@v3
         with:
-          path: node_modules
-          key: node_modules-${{ hashFiles('package-lock.json') }}
+          path: examples/csr-app/node_modules
+          key: csr_app_example_node_modules-${{ hashFiles('examples/csr-app/package-lock.json') }}
 
       - name: Install dependencies
         if: steps.cache-dependencies.outputs.cache-hit != 'true'
         run: npm ci
 
-      - uses: paambaati/codeclimate-action@v3.2.0
-        env:
-          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
-        with:
-          coverageCommand: npm test
-          coverageLocations:
-            ./coverage/lcov.info:lcov
+      - name: Run tests
+        run: npm run test
