--- a/examples/csr-app/package.json
+++ b/examples/csr-app/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@croct/plug-react": "latest",
+    "@croct/plug-react": "^0.5.0-next.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -17,6 +17,7 @@
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "jest-environment-jsdom": "^29.3.1",
     "react-scripts": "^5.0.1",
     "typescript": "^4.8.4"
   },
@@ -24,6 +25,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll=false",
+    "validate": "tsc --noEmit",
     "lint": "eslint 'src/**/*.ts' 'src/**/*.tsx'",
     "eject": "react-scripts eject"
   },
