--- a/examples/next-csr-app/package.json
+++ b/examples/next-csr-app/package.json
@@ -6,18 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "validate": "tsc --noEmit",
     "test": "jest",
     "lint": "eslint 'lib/**/*.ts' 'components/**/*.tsx' 'pages/**/*.tsx'"
   },
   "dependencies": {
-    "@croct/plug-react": "latest",
+    "@croct/plug-react": "^0.5.0-next.1",
     "next": "^12.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@croct/plug": "^0.11.0-alpha.2",
     "@croct/eslint-plugin": "^0.6.3",
+    "@croct/plug": "^0.11.0-alpha.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
@@ -25,6 +26,7 @@
     "@types/react": "^18.0.25",
     "babel-jest": "^29.3.1",
     "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "typescript": "^4.8.4"
   }
 }
