--- a/examples/next-ssr-app/package.json
+++ b/examples/next-ssr-app/package.json
@@ -6,11 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint 'lib/**/*.ts' 'components/**/*.tsx' 'app/**/*.tsx' 'pages/**/*.tsx'",
+    "validate": "tsc --noEmit",
+    "lint": "eslint 'lib/**/*.ts' 'components/**/*.tsx' 'app/**/*.tsx'",
     "test": "jest"
   },
   "dependencies": {
-    "@croct/plug-react": "latest",
+    "@croct/plug-react": "^0.5.0-next.1",
     "next": "^13.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -18,8 +19,8 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@croct/plug": "^0.11.0-alpha.2",
     "@croct/eslint-plugin": "^0.6.3",
+    "@croct/plug": "^0.11.0-alpha.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
@@ -32,6 +33,7 @@
     "eslint": "^8.27.0",
     "eslint-config-next": "^13.0.2",
     "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "typescript": "^4.8.4"
   }
 }
