--- a/.github/workflows/deploy-published-releases.yaml
+++ b/.github/workflows/deploy-published-releases.yaml
@@ -34,9 +34,11 @@ jobs:
         run: |-
           cp package.json LICENSE README.md build/
           cd build
+          find . -type f -path '*/*\.js.map' -exec sed -i -e "s~../src~src~" {} +
           sed -i -e "s~\"version\": \"0.0.0-dev\"~\"version\": \"${GITHUB_REF##*/}\"~" package.json
           sed -i -e "s~\./build~.~" package.json
           sed -i -e "s~./src~.~" package.json
+          cp -r ../src src
 
       - name: Publish pre-release to NPM
         if: ${{ github.event.release.prerelease }}
