--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "react-dom": "^16.8.0  || ^17.0.0 || ^18.0.0"
   },
   "dependencies": {
-    "@croct/plug": "^0.11.0-alpha.2",
-    "@croct/sdk": "^0.11.0-alpha"
+    "@croct/plug": "^0.11.0-alpha.3",
+    "@croct/sdk": "^0.11.0-alpha.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
@@ -73,7 +73,7 @@
   },
   "files": [
     "**/*.js",
-    "**/*.js.map",
-    "**/*.ts"
+    "**/*.ts",
+    "**/*.map"
   ]
 }
