--- a/examples/csr-app/package.json
+++ b/examples/csr-app/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@croct/plug-react": "^0.5.0-next.1",
+    "@croct/plug-react": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@croct/eslint-plugin": "^0.6.3",
-    "@croct/plug": "0.11.0-alpha.2",
+    "@croct/plug": "latest",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
