--- a/examples/next-csr-app/package.json
+++ b/examples/next-csr-app/package.json
@@ -11,14 +11,14 @@
     "lint": "eslint 'lib/**/*.ts' 'components/**/*.tsx' 'pages/**/*.tsx'"
   },
   "dependencies": {
-    "@croct/plug-react": "^0.5.0-next.1",
+    "@croct/plug-react": "latest",
     "next": "^12.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@croct/eslint-plugin": "^0.6.3",
-    "@croct/plug": "^0.11.0-alpha.2",
+    "@croct/plug": "latest",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
