--- a/examples/next-ssr-app/package.json
+++ b/examples/next-ssr-app/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@croct/plug-react": "latest",
-    "next": "^13.0.2",
+    "next": "^13.5.7-canary.37",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "server-only": "^0.0.1",
