--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "build": "tsc -p tsconfig.build.json"
   },
   "peerDependencies": {
-    "react": "^16.8.0  || ^17.0.0 || ^18.0.0",
-    "react-dom": "^16.8.0  || ^17.0.0 || ^18.0.0"
+    "react": "^16.8.0  || ^17.0.0 || ^18.0.0 || ^19.0.0",
+    "react-dom": "^16.8.0  || ^17.0.0 || ^18.0.0 || ^19.0.0"
   },
   "dependencies": {
     "@croct/plug": "^0.16.2",
@@ -48,8 +48,8 @@
     "@testing-library/react": "^16.0.1",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.5.4",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": ">=18.3.5",
+    "@types/react-dom": ">=18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "babel-loader": "^9.1.3",
@@ -57,8 +57,8 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.3.1 || ^19.0.0",
+    "react-dom": "^18.3.1 || ^19.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
     "webpack": "^5.94.0"
