--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "@testing-library/react": "^16.0.1",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.5.4",
-    "@types/react": ">=18.3.5",
-    "@types/react-dom": ">=18.3.0",
+    "@types/react": "^18.3.5 || ^19.0.0",
+    "@types/react-dom": "^18.3.0 || ^19.0.0",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "babel-loader": "^9.1.3",
