--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
     "noFallthroughCasesInSwitch": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "stripInternal": true,
   },
   "include": [
     "src/**/*.ts",
