--- a/.github/workflows/branch-validations.yaml
+++ b/.github/workflows/branch-validations.yaml
@@ -18,7 +18,10 @@ jobs:
      - uses: actions/checkout@v4
      - uses: actions/setup-node@v4
        with:
-         node-version: 20
+         registry-url: 'https://registry.npmjs.org'
+         node-version: 23
+       env:
+         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
      - name: Cache dependencies
        id: cache-dependencies
@@ -32,8 +35,7 @@ jobs:
        run: npm ci
 
      - name: Check dependency vulnerabilities
-       run: |-
-         npm audit --omit=dev
+       run: npm audit --omit=dev
 
   validate:
     runs-on: ubuntu-latest
@@ -41,7 +43,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 23
 
       - name: Cache dependencies
         id: cache-dependencies
@@ -65,7 +67,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 23
 
       - name: Cache dependencies
         id: cache-dependencies
@@ -89,7 +91,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 23
 
       - name: Cache dependencies
         id: cache-dependencies
