--- a/package.json
+++ b/package.json
@@ -18,29 +18,35 @@
     "type": "git",
     "url": "git+https://github.com/croct-tech/plug-react.git"
   },
-  "main": "./build/index.js",
-  "types": "./build/index.d.ts",
-  "source": "./src/index.ts",
+  "type": "module",
+  "main": "./index.js",
+  "types": "./index.d.ts",
+  "exports": {
+    "./*": {
+      "import": "./*.js",
+      "require": "./*.cjs"
+    }
+  },
   "engines": {
     "node": ">=10"
   },
   "scripts": {
     "lint": "eslint 'src/**/*.ts' 'src/**/*.tsx'",
-    "test": "jest -c jest.config.js --coverage",
+    "test": "jest -c jest.config.mjs --coverage",
     "validate": "tsc --noEmit",
-    "build": "tsc -p tsconfig.build.json"
+    "build": "tsup",
+    "postbuild": "./post-build.mjs"
   },
   "peerDependencies": {
     "react": "^16.8.0  || ^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-dom": "^16.8.0  || ^17.0.0 || ^18.0.0 || ^19.0.0"
   },
   "dependencies": {
-    "@croct/plug": "^0.16.2",
-    "@croct/sdk": "^0.17.6"
+    "@croct/plug": "^0.17.0",
+    "@croct/sdk": "^0.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
     "@croct/eslint-plugin": "^0.7.1",
@@ -50,22 +56,27 @@
     "@types/node": "^22.5.4",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "babel-loader": "^9.1.3",
+    "@typescript-eslint/eslint-plugin": "^6.18.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "esbuild-fix-imports-plugin": "^1.0.19",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.2",
+    "tsup": "^8.4.0",
     "typescript": "^5.6.2",
     "webpack": "^5.94.0"
   },
   "files": [
     "**/*.js",
+    "**/*.cjs",
+    "**/*.mjs",
     "**/*.ts",
+    "**/*.cts",
     "**/*.map"
   ]
 }
