--- a/.github/workflows/update-release-notes.yaml
+++ b/.github/workflows/update-release-notes.yaml
@@ -1,4 +1,4 @@
-name: Release Drafter
+name: Update release notes
 
 on:
   push:
@@ -11,7 +11,6 @@ jobs:
   release-draft:
     runs-on: ubuntu-latest
     steps:
-      - name: Update release draft
-        uses: release-drafter/release-drafter@v6
+      - uses: release-drafter/release-drafter@v6
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
